<resources>
    <string name="app_name">SD Card Scanner</string>
    <string name="retrieve_files_text">Retrieving files please wait…</string>
    <string name="start_btn_text">Start</string>
    <string name="stop_btn_text">STOP</string>
    <string name="show_result_btn_text">Show Results</string>
    <string name="Biggest_files_title">Name and Size of 10 Biggest Files:</string>
    <string name="average_file_title">Average File Size:</string>
    <string name="frequent_files_title">Name and Frequency of 5 most frequent Files:</string>
</resources>
