<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_large"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.sdcardscanner.ResultActivity"
    tools:showIn="@layout/activity_result">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/top10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tv_margin"
            android:text="@string/Biggest_files_title"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/tv_title_text_size"/>

        <TextView
            android:id="@+id/list_top_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tv_margin"
            android:layout_marginLeft="@dimen/tv_margin_vertical"
            android:layout_marginStart="@dimen/tv_margin_vertical"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/tv_sub_text_size"
            tools:text="top 10 files are"/>

        <include layout="@layout/divider"/>

        <TextView
            android:id="@+id/average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tv_margin"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/average_file_title"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/tv_title_text_size"/>

        <TextView
            android:id="@+id/average_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/tv_sub_text_size"
            tools:text="top 5 files are"/>

        <include layout="@layout/divider"/>

        <TextView
            android:id="@+id/top5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tv_margin"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/frequent_files_title"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/tv_title_text_size"/>

        <TextView
            android:id="@+id/list_top_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tv_margin_vertical"
            android:layout_marginStart="@dimen/tv_margin_vertical"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/tv_sub_text_size"
            tools:text="top 5 files are"/>

    </LinearLayout>
</ScrollView>
